--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>stackoverflow</title>
-  </head>
+    <title>Hactivoverflow</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <script src="https://www.gstatic.com/firebasejs/3.7.8/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyD9oblOp4KyRUCS7BO8X7n0k-V8GZecZPE",
+        authDomain: "hacktivoverflow.firebaseapp.com",
+        databaseURL: "https://hacktivoverflow.firebaseio.com",
+        projectId: "hacktivoverflow",
+        storageBucket: "hacktivoverflow.appspot.com",
+        messagingSenderId: "597828351745"
+      };
+      firebase.initializeApp(config);
+    </script>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
